--- a/Hippo/InternalClasses/Views/BotTableView/BotTableView.xib
+++ b/Hippo/InternalClasses/Views/BotTableView/BotTableView.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -18,17 +18,23 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                 </view>
-                <pickerView clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCg-h9-P12">
-                    <rect key="frame" x="0.0" y="517" width="375" height="150"/>
-                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="150" id="QbX-x9-LVC"/>
-                    </constraints>
-                </pickerView>
+                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="ouM-Li-rtY">
+                    <rect key="frame" x="0.0" y="400" width="375" height="51"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <textInputTraits key="textInputTraits"/>
+                </searchBar>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="x6a-xV-8CY">
+                    <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="rrf-0b-i6Y"/>
+                        <outlet property="delegate" destination="-1" id="si9-XK-oGA"/>
+                    </connections>
+                </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAh-2Q-7G6">
-                    <rect key="frame" x="0.0" y="482" width="375" height="35"/>
+                    <rect key="frame" x="0.0" y="365" width="375" height="35"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ftg-n1-Wy7">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ftg-n1-Wy7">
                             <rect key="frame" x="0.0" y="0.0" width="80" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="1dA-Ht-m6T"/>
@@ -40,7 +46,7 @@
                                 <action selector="cancelButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="mdA-KP-PXY"/>
                             </connections>
                         </button>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2F-KR-wxY">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="L2F-KR-wxY">
                             <rect key="frame" x="295" y="0.0" width="80" height="35"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="80" id="ZCx-Ht-qvD"/>
@@ -64,27 +70,50 @@
                         <constraint firstAttribute="trailing" secondItem="L2F-KR-wxY" secondAttribute="trailing" id="mi2-bH-XYA"/>
                     </constraints>
                 </view>
+                <pickerView hidden="YES" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zCg-h9-P12">
+                    <rect key="frame" x="0.0" y="451" width="375" height="216"/>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                </pickerView>
+                <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No bots found" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Sy-jG-qd5">
+                    <rect key="frame" x="134" y="549.5" width="107" height="19.5"/>
+                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="16"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
+            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.28136003521126762" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="zCg-h9-P12" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="4yx-qv-TfE"/>
-                <constraint firstItem="zCg-h9-P12" firstAttribute="top" secondItem="kAh-2Q-7G6" secondAttribute="bottom" id="9yi-TT-eXr"/>
+                <constraint firstItem="ouM-Li-rtY" firstAttribute="top" secondItem="kAh-2Q-7G6" secondAttribute="bottom" id="9N8-4U-zhS"/>
                 <constraint firstItem="kAh-2Q-7G6" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="Caw-gt-gKv"/>
+                <constraint firstItem="zCg-h9-P12" firstAttribute="top" secondItem="ouM-Li-rtY" secondAttribute="bottom" id="ChX-Ur-bjj"/>
+                <constraint firstItem="x6a-xV-8CY" firstAttribute="centerX" secondItem="zCg-h9-P12" secondAttribute="centerX" id="HzE-LE-XCO"/>
+                <constraint firstItem="4Sy-jG-qd5" firstAttribute="centerX" secondItem="zCg-h9-P12" secondAttribute="centerX" id="IZd-LJ-ZAn"/>
+                <constraint firstItem="ouM-Li-rtY" firstAttribute="trailing" secondItem="kAh-2Q-7G6" secondAttribute="trailing" id="MJX-2d-dwt"/>
                 <constraint firstItem="SZb-i9-bLW" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="WJ8-W9-7sg"/>
                 <constraint firstItem="kAh-2Q-7G6" firstAttribute="trailing" secondItem="vUN-kp-3ea" secondAttribute="trailing" id="YsV-dI-xaT"/>
+                <constraint firstItem="ouM-Li-rtY" firstAttribute="leading" secondItem="kAh-2Q-7G6" secondAttribute="leading" id="bY5-Eb-efd"/>
+                <constraint firstItem="x6a-xV-8CY" firstAttribute="height" secondItem="zCg-h9-P12" secondAttribute="height" id="dlt-RR-VKp"/>
                 <constraint firstItem="SZb-i9-bLW" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ikn-OB-JWa"/>
+                <constraint firstItem="x6a-xV-8CY" firstAttribute="centerY" secondItem="zCg-h9-P12" secondAttribute="centerY" id="jJO-Ul-Gee"/>
                 <constraint firstItem="zCg-h9-P12" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jXx-SJ-yZT"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="zCg-h9-P12" secondAttribute="bottom" id="jaH-TA-i8v"/>
+                <constraint firstItem="4Sy-jG-qd5" firstAttribute="centerY" secondItem="zCg-h9-P12" secondAttribute="centerY" id="nUw-3T-tgC"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="SZb-i9-bLW" secondAttribute="trailing" id="o1E-ig-nJ7"/>
+                <constraint firstItem="zCg-h9-P12" firstAttribute="bottom" secondItem="vUN-kp-3ea" secondAttribute="bottom" id="oMD-Ay-tXC"/>
                 <constraint firstItem="SZb-i9-bLW" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="sBA-qV-gXt"/>
+                <constraint firstItem="x6a-xV-8CY" firstAttribute="width" secondItem="zCg-h9-P12" secondAttribute="width" id="wBY-R4-J6s"/>
             </constraints>
-            <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
+                <outlet property="bottomConst" destination="oMD-Ay-tXC" id="qnC-bJ-0kU"/>
                 <outlet property="cancelButton" destination="Ftg-n1-Wy7" id="KWi-06-iuO"/>
                 <outlet property="dismissView" destination="SZb-i9-bLW" id="cnM-yy-qrr"/>
+                <outlet property="lblNoBot" destination="4Sy-jG-qd5" id="9op-am-8t0"/>
                 <outlet property="pickerSelectorView" destination="kAh-2Q-7G6" id="jkY-gn-LRr"/>
                 <outlet property="pickerView" destination="zCg-h9-P12" id="GRC-dg-Sa0"/>
+                <outlet property="searchBar" destination="ouM-Li-rtY" id="jrf-tD-ZDG"/>
                 <outlet property="sendButton" destination="L2F-KR-wxY" id="Hbz-6T-DCQ"/>
+                <outlet property="tblView" destination="x6a-xV-8CY" id="q3X-3d-0Wh"/>
             </connections>
             <point key="canvasLocation" x="35.5" y="31.5"/>
         </view>
