--- a/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
+++ b/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChatInfoTagViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="158" id="KGk-i7-Jjw" customClass="ChatInfoTagViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="358" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
+                <rect key="frame" x="0.0" y="0.0" width="358" height="158"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKe-y6-44E">
@@ -22,6 +22,21 @@
                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qax-kG-MAv">
+                        <rect key="frame" x="16" y="13" width="58" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="wmU-Xy-Qme"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="tags " image="AddTag">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <connections>
+                            <action selector="addTagsAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="bSw-qh-7wj"/>
+                        </connections>
+                    </button>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="TopLeft" semanticContentAttribute="forceLeftToRight" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8nB-7w-ch0">
                         <rect key="frame" x="48" y="10" width="383" height="128"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -35,8 +50,8 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <view clipsSubviews="YES" contentMode="scaleAspectFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-OO-1mb" customClass="TagListView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="16" y="76" width="409" height="229"/>
+                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-OO-1mb" customClass="TagListView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="16" y="46" width="326" height="104"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="removeButtonIconSize">
@@ -50,9 +65,12 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="8nB-7w-ch0" secondAttribute="bottom" constant="10" id="4WL-o9-odU"/>
+                    <constraint firstItem="Qax-kG-MAv" firstAttribute="leading" secondItem="bKe-y6-44E" secondAttribute="leading" id="4gY-08-WfE"/>
                     <constraint firstItem="8nB-7w-ch0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="71N-x9-AqS"/>
+                    <constraint firstAttribute="trailing" secondItem="pWw-OO-1mb" secondAttribute="trailing" constant="16" id="XwQ-br-cOO"/>
                     <constraint firstItem="bKe-y6-44E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Zir-bn-6Dw"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pWw-OO-1mb" secondAttribute="bottom" constant="40" id="hHf-MK-3un"/>
+                    <constraint firstItem="Qax-kG-MAv" firstAttribute="centerY" secondItem="bKe-y6-44E" secondAttribute="centerY" id="dP3-9o-iRY"/>
+                    <constraint firstAttribute="bottom" secondItem="pWw-OO-1mb" secondAttribute="bottom" constant="8" id="hHf-MK-3un"/>
                     <constraint firstItem="pWw-OO-1mb" firstAttribute="leading" secondItem="bKe-y6-44E" secondAttribute="leading" id="hhe-vG-Pxm"/>
                     <constraint firstItem="pWw-OO-1mb" firstAttribute="top" secondItem="bKe-y6-44E" secondAttribute="bottom" constant="16" id="iBB-b3-Mfn"/>
                     <constraint firstAttribute="trailing" secondItem="8nB-7w-ch0" secondAttribute="trailing" constant="10" id="myf-9g-N3o"/>
@@ -66,12 +84,16 @@
                 </variation>
             </tableViewCellContentView>
             <connections>
+                <outlet property="btnAddTag" destination="Qax-kG-MAv" id="qBU-u9-Ykg"/>
                 <outlet property="collectionViewOutlet" destination="8nB-7w-ch0" id="Atg-Ga-dqH"/>
                 <outlet property="heightConstraint" destination="H0i-6B-5iJ" id="BIR-uA-Huz"/>
                 <outlet property="tagTextLabel" destination="bKe-y6-44E" id="dCL-wB-zSA"/>
                 <outlet property="tagViewOutlet" destination="pWw-OO-1mb" id="pio-1T-Ons"/>
             </connections>
-            <point key="canvasLocation" x="-79" y="-231"/>
+            <point key="canvasLocation" x="-145.59999999999999" y="-272.56371814092955"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="AddTag" width="18" height="18"/>
+    </resources>
 </document>
