--- a/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
+++ b/Hippo/UIView/TableViewCell/ChatInfoTagView/ChatInfoTagViewCell.xib
@@ -1,42 +1,57 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ChatInfoTagViewCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="158" id="09t-44-9Zy" customClass="ChatInfoTagViewCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="358" height="158"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="441" height="249"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="09t-44-9Zy" id="1mE-vE-8oZ">
+                <rect key="frame" x="0.0" y="0.0" width="358" height="158"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bKe-y6-44E">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tags" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="z8f-AF-5uf">
                         <rect key="frame" x="16" y="12" width="32.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="TopLeft" semanticContentAttribute="forceLeftToRight" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="8nB-7w-ch0">
+                    <button opaque="NO" contentMode="scaleToFill" semanticContentAttribute="forceRightToLeft" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XxO-kk-crc">
+                        <rect key="frame" x="16" y="13" width="58" height="16"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="16" id="gjv-ST-p3g"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <color key="tintColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="tags " image="AddTag">
+                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        </state>
+                        <connections>
+                            <action selector="addTagsAction:" destination="09t-44-9Zy" eventType="touchUpInside" id="4P5-sZ-gR1"/>
+                        </connections>
+                    </button>
+                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="TopLeft" semanticContentAttribute="forceLeftToRight" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="g1Q-kS-DNk">
                         <rect key="frame" x="48" y="10" width="383" height="128"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="H0i-6B-5iJ"/>
+                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="10" id="gb8-tv-Udl"/>
                         </constraints>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="7sM-hP-nOA">
+                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="XHa-dB-hMy">
                             <size key="itemSize" width="50" height="50"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <view clipsSubviews="YES" contentMode="scaleAspectFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pWw-OO-1mb" customClass="TagListView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="16" y="76" width="409" height="229"/>
+                    <view clipsSubviews="YES" contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="fgA-nT-wXc" customClass="TagListView" customModule="Hippo" customModuleProvider="target">
+                        <rect key="frame" x="16" y="46" width="326" height="104"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <userDefinedRuntimeAttributes>
                             <userDefinedRuntimeAttribute type="number" keyPath="removeButtonIconSize">
@@ -49,29 +64,36 @@
                     </view>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="bottom" secondItem="8nB-7w-ch0" secondAttribute="bottom" constant="10" id="4WL-o9-odU"/>
-                    <constraint firstItem="8nB-7w-ch0" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="71N-x9-AqS"/>
-                    <constraint firstItem="bKe-y6-44E" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="Zir-bn-6Dw"/>
-                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="pWw-OO-1mb" secondAttribute="bottom" constant="40" id="hHf-MK-3un"/>
-                    <constraint firstItem="pWw-OO-1mb" firstAttribute="leading" secondItem="bKe-y6-44E" secondAttribute="leading" id="hhe-vG-Pxm"/>
-                    <constraint firstItem="pWw-OO-1mb" firstAttribute="top" secondItem="bKe-y6-44E" secondAttribute="bottom" constant="16" id="iBB-b3-Mfn"/>
-                    <constraint firstAttribute="trailing" secondItem="8nB-7w-ch0" secondAttribute="trailing" constant="10" id="myf-9g-N3o"/>
-                    <constraint firstItem="pWw-OO-1mb" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="oMl-CE-y5i"/>
-                    <constraint firstItem="bKe-y6-44E" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="qhk-lu-t4g"/>
+                    <constraint firstItem="fgA-nT-wXc" firstAttribute="leading" secondItem="z8f-AF-5uf" secondAttribute="leading" id="1Cc-NC-dr1"/>
+                    <constraint firstItem="g1Q-kS-DNk" firstAttribute="top" secondItem="1mE-vE-8oZ" secondAttribute="top" constant="10" id="38E-jC-hov"/>
+                    <constraint firstAttribute="trailing" secondItem="fgA-nT-wXc" secondAttribute="trailing" constant="16" id="6W0-MP-5Bb"/>
+                    <constraint firstAttribute="bottom" secondItem="g1Q-kS-DNk" secondAttribute="bottom" constant="10" id="8B8-Hr-3mL"/>
+                    <constraint firstItem="XxO-kk-crc" firstAttribute="leading" secondItem="z8f-AF-5uf" secondAttribute="leading" id="EV1-Jm-Yet"/>
+                    <constraint firstItem="fgA-nT-wXc" firstAttribute="centerX" secondItem="1mE-vE-8oZ" secondAttribute="centerX" id="KCM-zg-sjt"/>
+                    <constraint firstAttribute="bottom" secondItem="fgA-nT-wXc" secondAttribute="bottom" constant="8" id="MYZ-aA-qgp"/>
+                    <constraint firstItem="z8f-AF-5uf" firstAttribute="top" secondItem="1mE-vE-8oZ" secondAttribute="top" constant="12" id="NxY-wN-RuT"/>
+                    <constraint firstAttribute="trailing" secondItem="g1Q-kS-DNk" secondAttribute="trailing" constant="10" id="V5f-rD-exj"/>
+                    <constraint firstItem="fgA-nT-wXc" firstAttribute="top" secondItem="z8f-AF-5uf" secondAttribute="bottom" constant="16" id="Z7T-7k-UPk"/>
+                    <constraint firstItem="z8f-AF-5uf" firstAttribute="leading" secondItem="1mE-vE-8oZ" secondAttribute="leading" constant="16" id="eDu-0h-brf"/>
+                    <constraint firstItem="XxO-kk-crc" firstAttribute="centerY" secondItem="z8f-AF-5uf" secondAttribute="centerY" id="hsM-o3-mDJ"/>
                 </constraints>
                 <variation key="default">
                     <mask key="subviews">
-                        <exclude reference="8nB-7w-ch0"/>
+                        <exclude reference="g1Q-kS-DNk"/>
                     </mask>
                 </variation>
             </tableViewCellContentView>
             <connections>
-                <outlet property="collectionViewOutlet" destination="8nB-7w-ch0" id="Atg-Ga-dqH"/>
-                <outlet property="heightConstraint" destination="H0i-6B-5iJ" id="BIR-uA-Huz"/>
-                <outlet property="tagTextLabel" destination="bKe-y6-44E" id="dCL-wB-zSA"/>
-                <outlet property="tagViewOutlet" destination="pWw-OO-1mb" id="pio-1T-Ons"/>
+                <outlet property="btnAddTag" destination="XxO-kk-crc" id="Lnd-AD-5XX"/>
+                <outlet property="collectionViewOutlet" destination="g1Q-kS-DNk" id="5ZT-94-fXV"/>
+                <outlet property="heightConstraint" destination="gb8-tv-Udl" id="x6V-sq-JJn"/>
+                <outlet property="tagTextLabel" destination="z8f-AF-5uf" id="lgA-ae-zz9"/>
+                <outlet property="tagViewOutlet" destination="fgA-nT-wXc" id="Fxm-Hm-Iz9"/>
             </connections>
-            <point key="canvasLocation" x="-79" y="-231"/>
+            <point key="canvasLocation" x="-145.59999999999999" y="-272.56371814092955"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="AddTag" width="18" height="18"/>
+    </resources>
 </document>
