--- a/Hippo/UIView/TableViewCell/SearchCustomerTableViewCell/NoCustomersFoundTableViewCell.xib
+++ b/Hippo/UIView/TableViewCell/SearchCustomerTableViewCell/NoCustomersFoundTableViewCell.xib
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NoCustomersFoundTableViewCell" id="KGk-i7-Jjw" customClass="NoCustomersFoundTableViewCell" customModule="HippoAgent" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" reuseIdentifier="NoCustomersFoundTableViewCell" id="KGk-i7-Jjw" customClass="NoCustomersFoundTableViewCell" customModule="Hippo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -20,10 +20,10 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yq2-iJ-icM">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No customers found." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vea-jj-Pc7" customClass="So_CustomLabel" customModule="HippoAgent" customModuleProvider="target">
-                                <rect key="frame" x="15" y="11.5" width="285" height="20.5"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="No customers found." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vea-jj-Pc7" customClass="So_CustomLabel" customModule="Hippo" customModuleProvider="target">
+                                <rect key="frame" x="15" y="11.5" width="285" height="17"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="14"/>
+                                <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="RegularFontSizee">
@@ -39,6 +39,8 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="A1c-Lv-L1W"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="A1c-Lv-L1W" firstAttribute="trailing" secondItem="Fc0-tS-61c" secondAttribute="trailing" id="8Uo-HL-6r9"/>
                             <constraint firstItem="vea-jj-Pc7" firstAttribute="top" secondItem="A1c-Lv-L1W" secondAttribute="top" constant="11.5" id="KTY-GM-lC0"/>
@@ -48,9 +50,9 @@
                             <constraint firstItem="A1c-Lv-L1W" firstAttribute="trailing" secondItem="vea-jj-Pc7" secondAttribute="trailing" constant="20" id="krX-cv-zdn"/>
                             <constraint firstAttribute="bottom" secondItem="Fc0-tS-61c" secondAttribute="bottom" constant="1" id="mgQ-lQ-CfD"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="A1c-Lv-L1W"/>
                     </view>
                 </subviews>
+                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                 <constraints>
                     <constraint firstItem="Yq2-iJ-icM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="HrW-yk-ea4"/>
                     <constraint firstAttribute="bottom" secondItem="Yq2-iJ-icM" secondAttribute="bottom" id="bUm-TE-0rN"/>
@@ -59,6 +61,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <connections>
                 <outlet property="bottomLineView" destination="Fc0-tS-61c" id="lZ8-xq-2FC"/>
                 <outlet property="noCustomersLabel" destination="vea-jj-Pc7" id="k1H-75-NhY"/>
